Added the ZonedDateTime and Enumerations

--- a/src/main/webapp/i18n/en/edmsLocation.json
+++ b/src/main/webapp/i18n/en/edmsLocation.json
@@ -17,7 +17,7 @@
                 "title": "Edms Location"
             },
             "actualDirectory": "Actual Directory",
-            "statusId": "Status Id",
+            "status": "Status",
             "edmsResponse": "Edms Response",
             "edmsDownload": "Edms Download"
         }
