--- a/src/main/webapp/i18n/en/serviceWf.json
+++ b/src/main/webapp/i18n/en/serviceWf.json
@@ -16,7 +16,8 @@
             "detail": {
                 "title": "Service Wf"
             },
-            "statusId": "Status Id",
+            "status": "Status",
+            "wfStatus": "Wf Status",
             "updatedBy": "Updated By",
             "serviceResp": "Service Resp"
         }
